Fix layout gap size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ h1 {
   margin: 0 auto;
   display: flex;
   max-width: 1200px;
-  gap: 1rem;
+  gap: 4rem;
 }
 .container main {
   flex: 1 1 75%;
